--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     },
     "devDependencies": {
         "autoprefixer": "^10.4.4",
-        "axios": "^0.25",
-        "laravel-mix": "^6.0.6",
-        "lodash": "^4.17.19",
+        "axios": "^0.26",
+        "laravel-mix": "^6.0.43",
+        "lodash": "^4.17.21",
         "postcss": "^8.4.12",
-        "tailwindcss": "^3.0.24"
+        "tailwindcss": "^3.0.24",
+        "vue": "^3.2.33",
+        "vue-loader": "^17.0.0"
     }
 }
