--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "devDependencies": {
         "autoprefixer": "^10.4.4",
         "axios": "^0.26",
+        "filepond-plugin-file-validate-type": "^1.2.7",
         "laravel-mix": "^6.0.43",
         "lodash": "^4.17.21",
         "postcss": "^8.4.12",
         "tailwindcss": "^3.0.24",
         "vue": "^3.2.33",
         "vue-loader": "^17.0.0"
+    },
+    "dependencies": {
+        "filepond": "^4.30.3",
+        "vue-filepond": "^7.0.3"
     }
 }
